--- a/css/brainstyle.css
+++ b/css/brainstyle.css
@@ -120,6 +120,7 @@ p {
     border-radius: 3px;
     letter-spacing: 1px;
     font-weight: bold;
+    box-shadow: 2px 5px 8px #888888;
 }
 
 #btn-orcamento:hover {
