--- a/css/brainstyle.css
+++ b/css/brainstyle.css
@@ -33,6 +33,7 @@ body {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/*#formulario{opacity: 0.7;}*/
 
 
 
