--- a/css/brainstyle.css
+++ b/css/brainstyle.css
@@ -27,13 +27,12 @@ body,
 }
 
 body {
-    background: url(../img/fundo.png);
-    
+    background: url(../img/fundo.png);    
     background-attachment: fixed;    
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+/* */
 
-/*#formulario{opacity: 0.7;}*/
 
 
 
@@ -202,7 +201,103 @@ p {
    
 }
 
+/* cards serviços */
+.containerc{    
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
 
+.containerc .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.containerc .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.containerc .card .face.face1{
+    position: relative;
+    background: var(--background);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.containerc .card:hover .face.face1{
+    background: yellow;
+    transform: translateY(0);
+}
+
+.containerc .card .face.face1 .content{
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.containerc .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+.containerc .card .face.face1 .content img{
+    max-width: 100px;
+}
+
+.containerc .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.containerc .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.containerc .card:hover .face.face2{
+    transform: translateY(0);
+}
+
+.containerc .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.containerc .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color:var(--background);
+    padding: 5px;
+    border: 1px solid var(--background);
+}
+
+.containerc .card .face.face2 .content a:hover{
+    background: var(--background);
+    color: #fff;
+}
+
+/*Fim cards serviços*/
+
+
+
+/* Portfolio*/
+
+/* fim Portfolio*/
 .foto-container {
     display: flex;
     align-items: center;
