--- a/css/brainstyle.css
+++ b/css/brainstyle.css
@@ -17,6 +17,7 @@
 nav.navbar-main {    
     background: var(--background);
     
+    
 }
 
 html,
@@ -27,8 +28,7 @@ body,
 }
 
 body {
-    background: url(../img/fundo.png);    
-    background-attachment: fixed;    
+    background: var(--background) url(../img/fundo.png) no-repeat fixed center center;          
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /* */
@@ -53,11 +53,11 @@ body {
 #home h1,
 h2,
 p {
-    color: white;
+    color: #fff;
 }
 
 #conteudo p {
-    color: black;
+    color: #000;
 }
 
 .marcadorx h1 {
